# Desckcraft

./: .gitignore  AUDIT_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
docs/: ARCHITECTURE.md  BACKLOG.md  DATABASE.md  PRD.md  PROJECT_STRUCTURE.md
installer/: deskcraft.iss
scripts/: generate_icons.py  generate_wizard_images.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_seed_defaults.sql  003_help_and_tour.sql  004_default_rules.sql  005_extra_rules.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: help_commands.rs  history_commands.rs  license_commands.rs  mod.rs  organizer_commands.rs  profile_commands.rs  rule_commands.rs  schedule_commands.rs  settings_commands.rs  tips_commands.rs  tour_commands.rs  watched_folder_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs
src-tauri/src/db/queries/: help.rs  mod.rs  profiles.rs  rules.rs  runs.rs  schedules.rs  settings.rs  tips.rs  tour.rs  watched_folders.rs
src-tauri/src/license/: hardware.rs  service.rs  storage.rs  validator.rs
src-tauri/src/logger/: service.rs
src-tauri/src/organizer/: conflict.rs  executor.rs  mod.rs  rollback.rs  scanner.rs  simulator.rs
src-tauri/src/rules/: actions.rs  conditions.rs  engine.rs  mod.rs
src-tauri/src/tips/: engine.rs  heuristics.rs  mod.rs
src-tauri/src/watcher/: fs_watcher.rs  mod.rs  scheduler.rs
src/hooks/: useHelp.ts  (+1 more)
(+100 files in other folders)
